New Enhanced AI Answering correlating with realworld

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm start",
+    "dev:backend": "cd backend; npm run dev",
+    "dev:frontend": "cd frontend; npm start",
     "build": "npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "start": "cd backend && npm start",
+    "build:frontend": "cd frontend; npm run build",
+    "install:all": "npm install; cd backend; npm install; cd ../frontend; npm install",
+    "start": "cd backend; npm start",
+    "start:app": "start-app.bat",
     "test": "echo \"No tests specified\" && exit 0",
     "lint": "echo \"No linting configured\" && exit 0"
   },
