--- a/backend/env.example
+++ b/backend/env.example
@@ -14,4 +14,12 @@ NODE_ENV=development
 # RATE_LIMIT_MAX=10
 
 # Optional: CORS Origins (comma-separated)
-# CORS_ORIGINS=http://localhost:3000,https://yourdomain.com 
+# CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
+
+# Firebase Configuration (for frontend .env file)
+# REACT_APP_FIREBASE_API_KEY=your_firebase_api_key
+# REACT_APP_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+# REACT_APP_FIREBASE_PROJECT_ID=your_project_id
+# REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+# REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+# REACT_APP_FIREBASE_APP_ID=your_app_id 
