--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "firebase": "^12.0.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "axios": "^0.27.2",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.263.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,9 +41,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0"
   },
   "proxy": "http://localhost:5000"
-} 
+}
