--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,10 +1,13 @@
-# Firebase Configuration
-REACT_APP_FIREBASE_API_KEY=your_firebase_api_key_here
+# Frontend environment examples
+# Copy to .env or .env.production as needed
+
+# API base URL (production)
+REACT_APP_API_URL=https://<your-api-name>.azurewebsites.net
+
+# Firebase (keep current auth unless migrating)
+REACT_APP_FIREBASE_API_KEY=your_firebase_api_key
 REACT_APP_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=your_project_id
 REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-REACT_APP_FIREBASE_APP_ID=your_app_id
-
-# API Configuration
-REACT_APP_API_URL=http://localhost:5000 
+REACT_APP_FIREBASE_APP_ID=your_app_id 
